# memory_hogger

./: .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
