[package]
name = "memory_hogger"
version = "0.1.0"
description = "Just hogs a bunch of memory space and does nothing about it."
edition = "2024"
publish = false
license = "MIT"
readme = "README.md"
keywords = ["linux"]
categories = ["command-line-utilities"]
repository = "https://github.com/jacky9813/memory_hogger"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
dialoguer = "0.12.0"
humansize = "2.1.3"
rand = "0.10.1"
signal-notify = "0.1.3"
systemstat = "0.2.6"
